<resources>
    <string name="app_name">Ice Cream</string>
    <string name="the_works">The Works!</string>
    <string name="reset">Reset</string>
    <string name="order">Order</string>
    <string name="hot_fudge">Hot Fudge</string>
    <string name="hot_fudge_amount">1 oz</string>
    <string name="ounces">%1$d oz</string>
    <string name="ice_cream_sundae_maker">Ice Cream\nSundae Maker</string>
    <string name="almonds">Almonds</string>
    <string name="brownies">Brownies</string>
    <string name="gummy_bears">Gummy Bears</string>
    <string name="m_m_s"><![CDATA[M&M\'s]]></string>
    <string name="marshmallows">Marshmallows</string>
    <string name="oreos">Oreos</string>
    <string name="peanuts">Peanuts</string>
    <string name="strawberries">Strawberries</string>
    <string name="defaultAmount">$0.00</string>
    <string name="ice_cream">Ice Cream:</string>
    <string name="size">Size:</string>
    <string name="none">None</string>
    <string name="about">About</string>
    <string name="order_history">Order History</string>
    <string name="about_pagetext">Frank\'s Ice Cream Shop\nVersion 1.0.0</string>
    <string name="order_completed">Order Completed!</string>
    <string name="clear_history">Clear History</string>
    <string name="items_cleared">Order items have been cleared.</string>
    <string name="developer">Developed by Lonnie Standridge</string>
    <string-array name="size_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="flavor_array">
        <item>Vanilla</item>
        <item>Chocolate</item>
        <item>Strawberry</item>
    </string-array>
</resources>